[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-warehouse-slam"
version = "0.1.0"
description = "Isaac Sim warehouse exploration project with multi-sensor SLAM, frontier planning, and physical crate interaction."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

